# cloud-hypervisor

./: CHANGELOG.md  Cargo.toml
devices/src/: buffer_manager.rs  frame_buffer.rs  lib.rs
devices/src/legacy/: i8042.rs  mod.rs
devices/src/usb/: hid.rs  mod.rs
devices/src/usb/xhci/: device.rs  mod.rs  regs.rs  rings.rs
docs/: LG_CAPTURE_PROGRESS.md  WINDOWS_GUEST.md  lg-capture-api.md
guest-agent/: Cargo.toml
guest-agent/src/: agent.rs  audio.rs  capture.rs  cursor.rs  lib.rs  main.rs  protocol.rs  shm.rs
guest-agent/tests/: integration.rs
virtio-devices/src/: input.rs  lib.rs  seccomp_filters.rs
virtio-devices/src/gpu/: mod.rs
vmm/src/: config.rs  device_manager.rs  lib.rs  vm.rs  vm_config.rs
vmm/src/api/: mod.rs
vmm/src/api/http/: http_endpoint.rs  mod.rs
vmm/src/input/: backend.rs  batch.rs  event.rs  manager.rs  mod.rs
vmm/tests/: integration.rs
