[package]
name = "lg-guest-agent"
version = "0.1.0"
edition = "2021"
description = "lg-capture Guest Agent for frame capture and input injection"
license = "Apache-2.0"
authors = ["lg-capture contributors"]

[[bin]]
name = "lg-guest-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
simple_logger = "4.3"

# Signal handling
ctrlc = "3.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Shared memory
memmap2 = "0.9"

# Bitflags
bitflags = "2.4"

# X11 capture (optional, Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.12", features = ["shm", "allow-unsafe-code"] }
wayland-client = { version = "0.31", optional = true }
libc = "0.2"
libpulse-binding = { version = "2.0", optional = true }
libpulse-simple-binding = { version = "2.0", optional = true }

# Windows capture (optional)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["x11"]
x11 = []
wayland = ["wayland-client"]
dxgi = []
pulseaudio = ["libpulse-binding", "libpulse-simple-binding"]
